--- a/package.json
+++ b/package.json
@@ -25,10 +25,17 @@
     "postinstall": "^0.7.4",
     "socket.io": "^4.3.1"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
+    "@commitlint/cli": "^13.2.1",
     "@types/socket.io": "^3.0.2",
+    "husky": "^7.0.4",
     "nodemon": "^2.0.14",
+    "npm-run-all": "^4.1.5",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
