--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@types/socket.io": "^3.0.2",
     "husky": "^7.0.4",
     "nodemon": "^2.0.14",
