--- a/package.json
+++ b/package.json
@@ -23,13 +23,10 @@
   "homepage": "https://github.com/lucastnr/coup-online#readme",
   "dependencies": {
     "postinstall": "^0.7.4",
-    "socket.io": "^4.3.1"
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "@types/socket.io": "^3.0.2",
-    "nodemon": "^2.0.14",
-    "npm-run-all": "^4.1.5",
-    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
 }
