--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch 'src/' --exec 'ts-node src/index.ts' -e ts"
+    "run:kill": "sudo kill -9 `sudo lsof -t -i:1234`",
+    "run:server": "ts-node src/index.ts",
+    "start": "nodemon --watch 'src/' --exec 'npm-run-all -s -c \"run:**\"' -e ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "socket.io": "^4.3.1",
+    "npm-run-all": "^4.1.5",
+    "nodemon": "^2.0.14"
+  },
+  "devDependencies": {
+    "ts-node": "^10.4.0"
   }
 }
