--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactn": "^2.2.7",
     "socket.io-client": "^4.3.2",
@@ -17,7 +18,8 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.34",
     "@types/react": "^17.0.32",
-    "@types/react-dom": "^17.0.10"
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
