--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "socket.io": "^4.3.1",
+    "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
-    "nodemon": "^2.0.14"
+    "socket.io": "^4.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.1",
     "ts-node": "^10.4.0"
   }
 }
