--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
