--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/socket.io": "^3.0.2",
+    "@types/styled-components": "^5.1.15",
     "typescript": "^4.4.4"
   }
 }
